pixmaps_DATA = \
	accellabel.png \
	arrow.png \
	button.png \
	calendar.png \
	checkbutton.png \
	colorselection.png \
	colorselectiondialog.png \
	combo.png \
	curve.png \
	dialog.png \
	drawingarea.png \
	entry.png \
	fileselection.png \
	fontselection.png \
	fontselectiondialog.png \
	frame.png \
	gammacurve.png \
	handlebox.png \
	hbox.png \
	hbuttonbox.png \
	hpaned.png \
	hruler.png \
	hscrollbar.png \
	hseparator.png \
	image.png \
	inputdialog.png \
	label.png \
	menubar.png \
	messagedialog.png \
	notebook.png \
	optionmenu.png \
	radiobutton.png \
	scrolledwindow.png \
	selector.png \
	spinbutton.png \
	table.png \
	textview.png \
	togglebutton.png \
	toolbar.png \
	treeview.png \
	vbox.png \
	vbuttonbox.png \
	vpaned.png \
	vruler.png \
	vscrollbar.png \
	vseparator.png \
	window.png

EXTRA_DIST = $(pixmaps_DATA)
