pixmapsdir = $(glade_pixmapsdir)

pixmaps_DATA = \
	accellabel.png \
	arrow.png \
	button.png \
	calendar.png \
	checkbutton.png \
	colorselection.png \
	colorselectiondialog.png \
	combo.png \
	curve.png \
	dialog.png \
	drawingarea.png \
	entry.png \
	fileselection.png \
	filechooserdialog.png \
	fixed.png \
	fontselection.png \
	fontselectiondialog.png \
	frame.png \
	gammacurve.png \
	handlebox.png \
	hbox.png \
	hbuttonbox.png \
	hpaned.png \
	hruler.png \
	hscale.png \
	hscrollbar.png \
	hseparator.png \
	image.png \
	inputdialog.png \
	label.png \
	layout.png \
	menu.png \
	menubar.png \
	messagedialog.png \
	notebook.png \
	optionmenu.png \
	progressbar.png \
	radiobutton.png \
	scrolledwindow.png \
	selector.png \
	spinbutton.png \
	statusbar.png \
	table.png \
	textview.png \
	togglebutton.png \
	toolbar.png \
	treeview.png \
	vbox.png \
	vbuttonbox.png \
	viewport.png \
	vpaned.png \
	vruler.png \
	vscale.png \
	vscrollbar.png \
	vseparator.png \
	window.png

EXTRA_DIST = $(pixmaps_DATA)
