pixmapsdir = $(glade_pixmapsdir)

pixmaps_DATA = \
	accellabel.png \
	arrow.png \
	button.png \
	calendar.png \
	checkbutton.png \
	colorselection.png \
	colorselectiondialog.png \
	combo.png \
	curve.png \
	dialog.png \
	drawingarea.png \
	entry.png \
	fileselection.png \
	filechooserdialog.png \
	fixed.png \
	fontselection.png \
	fontselectiondialog.png \
	frame.png \
	gammacurve.png \
	handlebox.png \
	hbox.png \
	hbuttonbox.png \
	hpaned.png \
	hruler.png \
	hscale.png \
	hscrollbar.png \
	hseparator.png \
	image.png \
	inputdialog.png \
	label.png \
	layout.png \
	menu.png \
	menubar.png \
	messagedialog.png \
	notebook.png \
	optionmenu.png \
	progressbar.png \
	radiobutton.png \
	scrolledwindow.png \
	selector.png \
	spinbutton.png \
	statusbar.png \
	table.png \
	textview.png \
	togglebutton.png \
	toolbar.png \
	treeview.png \
	vbox.png \
	vbuttonbox.png \
	viewport.png \
	vpaned.png \
	vruler.png \
	vscale.png \
	vscrollbar.png \
	vseparator.png \
	window.png \
	devhelp.png

if BUILD_GNOME
pixmaps_DATA += bonobodockitem.png \
	gnomecanvas.png \
	gnomedruidpageedge.png \
	gnomefontpicker.png \
	gnomepixmap.png \
	bonobodock.png \
	gnomecolorpicker.png \
	gnomedruidpagestandard.png \
	gnomehref.png \
	gnomepixmapentry.png \
	gnomeabout.png \
	gnomecontrol.png \
	gnomedruid.png \
	gnomeiconentry.png \
	gnomeapp.png \
	gnomedateedit.png \
	gnomeentry.png \
	gnomeiconlist.png \
	gnomeappbar.png \
	gnomedialog.png \
	gnomefileentry.png \
	gnomeiconselection.png \
	gnomemessagebox.png \
	gnomepropertybox.png
endif

EXTRA_DIST = $(pixmaps_DATA)
